@startuml actor

interface MaterialDeBiblioteca {
    +verSinopsis(): void
    +prestar(): void
}

class Libro implements MaterialDeBiblioteca {
    - titulo: String
    - autor: String
    - fechaPublicacion: String
    - identificador: String
    +verSinopsis(): void
    +prestar(): void
}

class Revista implements MaterialDeBiblioteca{
    - titulo: String
    - editor: String
    - numeroEdicion: int
    +verSinopsis(): void
    +prestar(): void
}

class Persona {
    - nombre: String
    - fechaNacimiento: String
    +presentacion(): void
}

class Autor {
    - nombre: String
    - librosEscritos: List<Libro>
    +mostrarLibrosPorFecha(): void
}

class Usuario {
    - nombre: String
    - ID: String
    - librosPrestados: List<MaterialDeBiblioteca>
}

class Bibliotecario {
    +añadirLibro(libro: Libro): void
    +eliminarLibro(libro: Libro): void
}

class Biblioteca {
    - listaDeMateriales: List<MaterialDeBiblioteca>
    - listaDeUsuarios: List<Usuario>
}


Persona <|-- Usuario
Persona <|-- Autor
Persona <|--Bibliotecario

Biblioteca *--  MaterialDeBiblioteca
Biblioteca *--  Persona

@enduml
